--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
 	background: linear-gradient(-45deg, #e2c81f, #e20157, #23a6d5, #58e8c6);
-	background-size: 400% 400%;
+	<!--background-size: 400% 400%; -->
 	animation: gradient 15s ease infinite;
-	height: 120vh;
+	<!--height: 120vh; -->
 }
 
 @keyframes gradient {
